--- a/fluxodedados/compile.cfg
+++ b/fluxodedados/compile.cfg
@@ -4,8 +4,6 @@ Architecture=
 TopLevelType=
 [file:.\src\mux5bits.bde]
 Enabled=1
-[file:.\src\m_wb.vhd]
-Enabled=1
 [file:.\src\icache.vhd]
 Enabled=1
 [file:.\src\ex.bak]
@@ -99,4 +97,33 @@ Enabled=1
 [file:.\src\cacheD.vhd]
 Enabled=1
 [file:.\src\memoriaprincipal.vhd]
+Enabled=1
+[file:.\src\M_WB.bde]
+Enabled=1
+[file:.\src\novomemoriaw.vhd]
+Enabled=1
+[file:.\src\_WB.vhd]
+Enabled=1
+[file:.\src\WB.vhd]
+Enabled=1
+[file:.\src\gro.vhd]
+Enabled=1
+[file:.\src\M_WB.vhd]
+Enabled=1
+[file:.\src\MWB.bde]
+Enabled=1
+[file:.\compile\MWB.vhd]
+Generated=TRUE
+Enabled=1
+[file:.\src\b3.bde]
+Enabled=1
+[file:.\src\mwb4.bde]
+Enabled=1
+[file:.\src\mwb4.vhd]
+Enabled=1
+[file:.\src\wb3.vhd]
+Enabled=1
+[file:.\src\membw5.vhd]
+Enabled=1
+[file:.\src\dmem2.vhd]
 Enabled=1
